# quaternion-based-complementary-filter-for-MPU6050-with-adaptive-gain

./: .Quaternion.C.swp  .quaternion.C.swp  CMakeLists.txt  Quaternion.C  quaternion.C  quaternions.h
src/: complementary_filter.c  complementary_filter.h  quaternion.C  quaternion.c  quaternion.h  quaternions.h
visualise/: CMakeLists.txt  ctype_bypass.py  debug_imu_filter.py  dummy_stream.c  quaternion_ctypes.py  real_imu_stream.c  test1.c  thread.py  visualise.py  visualize_quaternion.py
